add: shared library

--- a/.terraform-docs.yaml
+++ b/.terraform-docs.yaml
@@ -41,7 +41,7 @@ content: |
     * Document your code using `make prepare-readme`;
     * Push and Pull request,
   
-  <sub>Questions? let me know: carlos.oliveira@softwareone.com</sub>
+  <sub>Questions? let me know: rosthanlinux@outlook.com </sub>
   
 settings:
   color: true
